#279: Added additional tests