@@ -335,6 +335,8 @@
                         --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-opens javafx.base/com.sun.javafx.beans=ALL-UNNAMED
                         --add-opens application.backend/com.github.yoep.popcorn.backend.adapters.torrent=ALL-UNNAMED
+                        --add-opens application.backend/com.github.yoep.popcorn.backend.adapters.player=ALL-UNNAMED
+                        --add-opens application.backend/com.github.yoep.popcorn.backend.adapters.player.listeners=ALL-UNNAMED
                         --add-opens application.backend/com.github.yoep.popcorn.backend.controls=ALL-UNNAMED
                         --add-opens application.backend/com.github.yoep.popcorn.backend.events=ALL-UNNAMED
                         --add-opens application.backend/com.github.yoep.popcorn.backend.info=ALL-UNNAMED
